# aws-robomaker-small-house-world

./: CMakeLists.txt  package.xml
launch/: small_house.launch.py
models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
models/aws_robomaker_residential_Board_01/: model.sdf
models/aws_robomaker_residential_Chandelier_01/: model.sdf
models/aws_robomaker_residential_CookingBench_01/: model.sdf
models/aws_robomaker_residential_Curtain_01/: model.sdf
models/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
models/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
models/aws_robomaker_residential_DeskPortraitB_01/: model.sdf
models/aws_robomaker_residential_DeskPortraitB_02/: model.sdf
models/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
models/aws_robomaker_residential_DeskPortraitC_02/: model.sdf
models/aws_robomaker_residential_Door_01/: model.sdf
models/aws_robomaker_residential_FoldingDoor_01/: model.sdf
models/aws_robomaker_residential_FoldingDoor_02/: model.sdf
models/aws_robomaker_residential_Handle_01/: model.sdf
models/aws_robomaker_residential_HouseWallB_01/: model.sdf
models/aws_robomaker_residential_KitchenCabinet_01/: model.sdf
models/aws_robomaker_residential_KitchenUtensils_01/: model.sdf
models/aws_robomaker_residential_LightC_01/: model.sdf
models/aws_robomaker_residential_Pillow_01/: model.sdf
models/aws_robomaker_residential_PortraitA_01/: model.sdf
worlds/: empty.world  kitchen_table.world  small_house.world
(+19 files in other folders)
